# nautilus-trader-rig

./: .gitignore  COMMIT_ANALYZER.md  Cargo.toml  FEATURES.md  INSTRUCTIONS.md  README.md  Shuttle.toml  analysis_results.txt  analyze-commits.sh  check_paths.py  commits.txt  commits_detailed.txt  config_test.rs  deploy.sh  example_bug_structure.rs  path_test  path_test.rs  run.sh  shuttle_postbuild.sh  shuttle_prebuild.sh  shuttle_setup_container.sh
.shuttle/: config.toml
bugs/: AUTO_BUG_common_17_183509_common_20250825_183509.json  AUTO_BUG_common_18_150948_common_20250823_150948.json  AUTO_BUG_config_2_091121_config_20250826_091121.json  AUTO_BUG_config_2_182233_config_20250825_182233.json  AUTO_BUG_credential_2_145937_credential_20250823_145937.json  AUTO_BUG_data_13_183151_data_20250825_183151.json  AUTO_BUG_data_14_150721_data_20250823_150721.json  AUTO_BUG_decode_14_183315_decode_20250825_183315.json  AUTO_BUG_decode_15_150811_decode_20250823_150811.json  AUTO_BUG_decode_4_115233_decode_20250826_115233.json  AUTO_BUG_decode_5_182454_decode_20250825_182454.json  AUTO_BUG_decode_6_150159_decode_20250823_150159.json  AUTO_BUG_enums_1_145907_enums_20250823_145907.json  AUTO_BUG_enums_5_115352_enums_20250826_115352.json  AUTO_BUG_enums_6_182555_enums_20250825_182555.json  AUTO_BUG_enums_7_150250_enums_20250823_150250.json  AUTO_BUG_factories_11_183009_factories_20250825_183009.json  AUTO_BUG_factories_12_150543_factories_20250823_150543.json  AUTO_BUG_factories_1_091106_factories_20250826_091106.json  AUTO_BUG_factories_1_113135_factories_20250826_113135.json  (+4346 more)
(+33 files in other folders)
