[package]
name = "nautilus_trader_rig_mcp"
version = "0.1.0"
edition = "2021"
default-run = "nautilus_trader_rig_mcp"

[dependencies]
anyhow = "1"
rmcp = { version = "0.6", features = [
	"client",
	"transport-child-process"
] }
serde_json = "1"
# We only need process + runtime + macros
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "process"] }
rig-core = { version = "0.15.1" }

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "nautilus-rig-agent"
path = "src/bin/rig_agent.rs"
