[package]
name = "nautilus_trader_rig"
version = "0.1.0"
edition = "2021"
default-run = "nautilus_trader_rig"

[dependencies]
anyhow = "1"
apalis = "0.5"
apalis-cron = "0.5"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
fs_extra = "1.3"
futures = "0.3"
log = "0.4"
pathdiff = "0.2"
rayon = "1.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rig = { package = "rig-core", version = "0.18" }
rmcp = { version = "0.6", features = ["client", "transport-child-process"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.40"
base64 = "0.22"
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
which = "6.0"

[profile.release]
codegen-units = 1
lto = true
